# helloGoogleProtobuf

./: CMakeLists.txt  README.md
src/: main_read.cpp  main_write.cpp
